frontend: fixed button layout issue on export calendar

--- a/frontend/src/components/popup/ExportCalendar.module.css
+++ b/frontend/src/components/popup/ExportCalendar.module.css
@@ -6,6 +6,8 @@
         height: 1.75em;
         width: fit-content;
 
+        white-space: nowrap;
+
         & svg {
             width: 1em;
             height: 1em;
